# ms-sensor-reader

./: .gitignore  CONNECTION_DIAGRAMS.md  README.md  main.py  pyproject.toml
common/: device.py  device_registerer.py  gpio_config.py  lmdb_clients.py  metric_type.py  pin_registry.py  repo_refresher.py  retry_worker.py  sensor_config_loader.py  settings.py
data.lmdb/: data.mdb  lock.mdb
metrics_exporter/: __init__.py  api_exporter.py  exporter_interface.py  lmdb_exporter.py  log_exporter.py
sensors/: __init__.py  sensor_interface.py
sensors/live/: __init__.py
sensors/live/analog/: __init__.py  analog_sensor_base.py  pressure_sensor.py
sensors/live/io/: __init__.py  float_sensor.py  io_sensor_base.py
sensors/test/: energy_consumption_sensor.py  float_sensor.py  pressure_sensor.py
